# ContentGenerator

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  business_model.txt  docker-compose.yml  dump.rdb
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 75927330b2a9_generate_tables.py  a1b2c3d4e5f6_add_trending_repos_table.py  b2c3d4e5f6a7_add_repo_assessment_to_trending_repos.py  cead9ae91c33_add_velocity_and_cross_source_scores_to_.py  e376ce15cbe2_initial_schema.py
backend/api/: main.py  router.py
backend/api/middleware/: correlation_id.py  request_logging.py
backend/api/v1/: health.py
backend/core/: bootstrap.py  cache.py  config.py  error_handler.py  logging.py  rate_limit.py  security.py  storage.py  telemetry.py  time_utils.py
backend/db/: base.py  model_registry.py  session.py
backend/modules/analytics/: models.py  optimization.py  providers.py  repository.py  router.py  schemas.py  service.py
backend/modules/approvals/: models.py  providers.py  repository.py  router.py  schemas.py  (+1 more)
backend/prompts/: generate_twitter_post.md
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_content_generation.py  test_fact_review.py  test_health_api.py  test_identity_access_router.py  test_identity_access_service.py  test_local_model_abstraction.py  test_media_rendering.py  test_migration_smoke.py  test_providers.py  test_source_ingestion.py  test_step10_tts.py  test_step12_generation_layer.py  test_step1_foundation.py  test_step2_tiering_risk_gates.py  test_step3_editorial_briefs.py  test_step4_telegram_approval.py  test_step5_x_bluesky_publishing.py  test_step6_inference_roles.py  test_step7_trend_scoring.py  test_step8_analytics_feedback.py  test_step9_image_generation.py  test_story_intelligence.py  test_tasks.py  test_trending_repos_service.py  test_whatsapp_settings.py
backend/workers/: celery_app.py  email.py  runtime.py  signals.py  tasks.py
(+184 files in other folders)
