[project]
name = "content-generator-backend"
version = "0.1.0"
description = "Multi-tenant AI social content platform backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21.0",
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "pyjwt>=2.9.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.16",
    "email-validator>=2.2.0",
    "aiosmtplib>=3.0.2",
    "pyotp>=2.9.0",
    "boto3>=1.35.0",
    "cryptography>=43.0.3",
    "feedparser>=6.0.11",
    "trafilatura>=1.12.2",
    "playwright>=1.49.0",
    "beautifulsoup4>=4.12.3",
    "tenacity>=9.0.0",
    "langdetect>=1.0.9",
    "python-slugify>=8.0.4",
    "orjson>=3.10.11",
    "faster-whisper>=1.1.0",
    "numpy>=2.1.0",
    "opentelemetry-api>=1.28.1",
    "opentelemetry-sdk>=1.28.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.1",
    "opentelemetry-instrumentation-fastapi>=0.49b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b1",
    "opentelemetry-instrumentation-httpx>=0.49b1",
    "opentelemetry-instrumentation-redis>=0.49b1",
    "sentry-sdk[fastapi]>=2.19.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "types-redis>=4.6.0.20241004",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["B008", "E501", "F401"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
plugins = []
strict = true
exclude = ["alembic"]
